--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1",
       "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.0-beta.1",
+      "aurelia-fetch-client": "npm:aurelia-fetch-client@1.0.0-beta.1.1.0",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.0.6",
       "aurelia-http-client": "npm:aurelia-http-client@^1.0.0-beta.1",
       "aurelia-loader": "npm:aurelia-loader@^1.0.0-beta.1",
@@ -84,17 +85,21 @@
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.1.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.0.2",
       "css": "github:systemjs/plugin-css@0.1.20",
+      "fetch": "github:github/fetch@^1.0.0",
       "font-awesome": "npm:font-awesome@^4.5.0",
       "google/code-prettify": "github:google/code-prettify@master",
       "jquery": "github:components/jquery@2.1.4",
       "json": "github:systemjs/plugin-json@^0.1.0",
+      "lodash": "npm:lodash@^4.12.0",
       "materialize": "github:Dogfalo/materialize@^0.97.5",
       "nprogress": "github:rstacruz/nprogress@^0.2.0",
       "prettify": "npm:prettify@^0.1.7",
       "prism": "github:PrismJS/prism@1.3.0",
       "showdown": "github:showdownjs/showdown@1.3.0",
       "showdown-prettify": "npm:showdown-prettify@^1.0.2",
-      "text": "github:systemjs/plugin-text@^0.0.4"
+      "text": "github:systemjs/plugin-text@^0.0.4",
+      "todomvc-app-css": "npm:todomvc-app-css@2.0.4",
+      "todomvc-common": "npm:todomvc-common@1.0.2"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
